<resources>
    <string name="app_name" translatable="false">Sleep Fresh</string>

    <string name="automatic_alarm">Automatic Alarm</string>
    <string name="regular_alarm">Regular Alarm</string>

    <string name="notification_alarm_message">Stop the alarm!</string>

    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>

    <string-array name="alarm_period_entries">
        <item>3 hours</item>
        <item>6 hours</item>
        <item>9 hours</item>
        <item>12 hours</item>
    </string-array>
</resources>
